@@ -55,6 +55,7 @@ x added: `ACTION(url, [data], callback)` can evaluate a route without request cr
 x added: `ROUTE('🔒 METHOD URL')`, it means that 🔒 adds `authorized` flag
 x added: `ROUTE('++ METHOD URL')`, it means that `++` or `+` adds `authorized` flag
 x added: `ROUTE('-- METHOD URL')`, it means that `--` or `-` adds `authorized` flag
+x added: `SchemaOptions`, `OperationOptions`, `TaskOptions` supports filtered query arguments via `$.filter`
 
 x updated: `$.invalid()` without arguments can return a function `function(err)`
 x updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
